--- a/test_code_deltaslim triangles.ipynb
+++ b/test_code_deltaslim triangles.ipynb
@@ -12,14 +12,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "id": "2446bddb",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ecdc9301dc8e418db0847142576393ca",
+       "model_id": "e3ab12045a6a48f29705a19e149641b2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -57,8 +57,7 @@
     "                group.draw(line, hwidth=0.1, fill='white')\n",
     "    for x, y in points:\n",
     "        p = hyper.Point.fromEuclid(x, y)\n",
-    "        group.draw(hyper.Circle.fromCenterRadius(p, 0.05),\n",
-    "                   fill='green')\n",
+    "        group.draw(hyper.Circle.fromCenterRadius(p, 0.05), fill='green')\n",
     "redraw(click_list)\n",
     "\n",
     "# Create interactive widget and register mouse events\n",
@@ -82,31 +81,97 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2e77d643",
+   "metadata": {},
+   "source": [
+    "new code specific for our usecase"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "062c2856",
+   "execution_count": 21,
+   "id": "388d6c6d",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<hyperbolic.poincare.Line.Line object at 0x000002A8D5A8CEB0>\n"
-     ]
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "7eb5b472d1044e8484f79c2868719c49",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "DrawingWidget()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "p1 = hyper.Point.fromEuclid(0.5,0.25)\n",
-    "p2 = hyper.Point.fromEuclid(0.5,-0.25)\n",
-    "geod = hyper.Line.fromPoints(*p1,*p2, segment=True)\n",
-    "print(geod)\n",
-    "print (\"Hello world\")\n"
+    "import drawSvg as draw\n",
+    "from drawSvg.widgets import DrawingWidget\n",
+    "import hyperbolic.poincare.shapes as hyper  # pip3 install hyperbolic\n",
+    "\n",
+    "delta=0.88\n",
+    "click_list=[]\n",
+    "\n",
+    "# Create drawing\n",
+    "d = draw.Drawing(2, 2, origin='center')\n",
+    "d.setRenderSize(500)\n",
+    "d.append(draw.Circle(0, 0, 1, fill='blue'))\n",
+    "group = draw.Group()\n",
+    "g=draw.Group()\n",
+    "d.append(group)\n",
+    "d.append(g)\n",
+    "\n",
+    "\n",
+    "def draw_delta_neigbourhood_twosides(points,delta):\n",
+    "    for i,x in enumerate(points):\n",
+    "        p1=hyper.Point.fromEuclid(x[0],x[1])\n",
+    "        g.draw(hyper.Circle.fromCenterRadius(p1, delta), fill='red',fill_opacity=0.5)\n",
+    "        for y in points[i+1:]:\n",
+    "            if i==0:\n",
+    "                p2=hyper.Point.fromEuclid(y[0],y[1])\n",
+    "                line = hyper.Line.fromPoints(*p1, *p2, segment=True)\n",
+    "                g.draw(line, hwidth=2*delta, fill='red',fill_opacity=0.5)\n",
+    "                \n",
+    "def redraw(points):\n",
+    "    for i,x in enumerate(points):\n",
+    "        p1=hyper.Point.fromEuclid(x[0],x[1])\n",
+    "        for y in points[i+1:]:\n",
+    "            p2=hyper.Point.fromEuclid(y[0],y[1])\n",
+    "            line=hyper.Line.fromPoints(*p1,*p2,segment=True)\n",
+    "            group.draw(line, hwidth=0.1,fill='white')\n",
+    "        group.draw(hyper.Circle.fromCenterRadius(p1, 0.05), fill='white')\n",
+    "        \n",
+    "        \n",
+    "widget = DrawingWidget(d)\n",
+    "@widget.mousedown\n",
+    "def mousedown(widget, x, y, info):\n",
+    "        if (x**2 + y**2) ** 0.5 + 1e-5 < 1:\n",
+    "            if len(click_list)<3:\n",
+    "                click_list.append((x, y))\n",
+    "            else:\n",
+    "                draw_delta_neigbourhood_twosides(click_list,delta)\n",
+    "        widget.refresh()\n",
+    "        \n",
+    "        \n",
+    "@widget.mousemove\n",
+    "def mousemove(widget, x, y, info):\n",
+    "    if (x**2 + y**2) ** 0.5 + 1e-5 < 1:\n",
+    "        if len(click_list)<3:\n",
+    "            group.children.clear()\n",
+    "            redraw(click_list + [(x, y)])\n",
+    "    widget.refresh()\n",
+    "widget"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0640d818",
+   "id": "99594151",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -114,7 +179,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
