--- a/test_code_deltaslim triangles.ipynb
+++ b/test_code_deltaslim triangles.ipynb
@@ -90,14 +90,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "id": "388d6c6d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7eb5b472d1044e8484f79c2868719c49",
+       "model_id": "82b40eefdc39497eb66b389216e7d291",
        "version_major": 2,
        "version_minor": 0
       },
@@ -112,49 +112,66 @@
    "source": [
     "import drawSvg as draw\n",
     "from drawSvg.widgets import DrawingWidget\n",
+    "from hyperbolic import euclid, util\n",
+    "from hyperbolic.poincare.shapes import *\n",
+    "from hyperbolic.poincare import Transform\n",
     "import hyperbolic.poincare.shapes as hyper  # pip3 install hyperbolic\n",
     "\n",
-    "delta=0.88\n",
+    "delta=0.3\n",
     "click_list=[]\n",
+    "lineStyle2 = dict(stroke_width=0.01, stroke='white', fill='none' #,stroke_dasharray='.02,.02'\n",
+    "                 )\n",
     "\n",
     "# Create drawing\n",
-    "d = draw.Drawing(2, 2, origin='center')\n",
+    "d = draw.Drawing(2.2, 2.2, origin='center')\n",
     "d.setRenderSize(500)\n",
-    "d.append(draw.Circle(0, 0, 1, fill='blue'))\n",
-    "group = draw.Group()\n",
+    "d.append(draw.Circle(0, 0, 1, fill='blue',stroke_width=0.02, stroke='black'))\n",
     "g=draw.Group()\n",
-    "d.append(group)\n",
     "d.append(g)\n",
     "\n",
     "\n",
     "def draw_delta_neigbourhood_twosides(points,delta):\n",
     "    for i,x in enumerate(points):\n",
     "        p1=hyper.Point.fromEuclid(x[0],x[1])\n",
-    "        g.draw(hyper.Circle.fromCenterRadius(p1, delta), fill='red',fill_opacity=0.5)\n",
+    "        g.draw(hyper.Circle.fromCenterRadius(p1, delta), fill='red',fill_opacity=1)\n",
     "        for y in points[i+1:]:\n",
     "            if i==0:\n",
     "                p2=hyper.Point.fromEuclid(y[0],y[1])\n",
     "                line = hyper.Line.fromPoints(*p1, *p2, segment=True)\n",
-    "                g.draw(line, hwidth=2*delta, fill='red',fill_opacity=0.5)\n",
+    "                g.draw(line, hwidth=2*delta, fill='red',fill_opacity=1)\n",
     "                \n",
     "def redraw(points):\n",
     "    for i,x in enumerate(points):\n",
     "        p1=hyper.Point.fromEuclid(x[0],x[1])\n",
     "        for y in points[i+1:]:\n",
     "            p2=hyper.Point.fromEuclid(y[0],y[1])\n",
-    "            line=hyper.Line.fromPoints(*p1,*p2,segment=True)\n",
-    "            group.draw(line, hwidth=0.1,fill='white')\n",
-    "        group.draw(hyper.Circle.fromCenterRadius(p1, 0.05), fill='white')\n",
+    "            line=Line.fromPoints(*p1,*p2,segment=True)\n",
+    "            g.draw(line, **lineStyle2)\n",
+    "        g.draw(hyper.Circle.fromCenterRadius(p1, 0.01), fill='white')\n",
     "        \n",
+    "def shift(seq, shift=1):\n",
+    "    perm=shift%3 \n",
+    "    return seq[-perm:] + seq[:-perm]\n",
+    "\n",
+    "clicks=0\n",
     "        \n",
     "widget = DrawingWidget(d)\n",
     "@widget.mousedown\n",
     "def mousedown(widget, x, y, info):\n",
+    "        global clicks\n",
+    "        clicks+=1\n",
     "        if (x**2 + y**2) ** 0.5 + 1e-5 < 1:\n",
-    "            if len(click_list)<3:\n",
+    "            if clicks<3:\n",
     "                click_list.append((x, y))\n",
-    "            else:\n",
+    "            elif clicks==3:\n",
+    "                click_list.append((x,y))\n",
+    "                g.children.clear()\n",
     "                draw_delta_neigbourhood_twosides(click_list,delta)\n",
+    "                redraw(click_list)\n",
+    "            else:\n",
+    "                g.children.clear()\n",
+    "                draw_delta_neigbourhood_twosides(shift(click_list,clicks),delta)\n",
+    "                redraw(shift(click_list,clicks))\n",
     "        widget.refresh()\n",
     "        \n",
     "        \n",
@@ -162,7 +179,7 @@
     "def mousemove(widget, x, y, info):\n",
     "    if (x**2 + y**2) ** 0.5 + 1e-5 < 1:\n",
     "        if len(click_list)<3:\n",
-    "            group.children.clear()\n",
+    "            g.children.clear()\n",
     "            redraw(click_list + [(x, y)])\n",
     "    widget.refresh()\n",
     "widget"
@@ -172,6 +189,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "99594151",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bb11218f",
    "metadata": {},
    "outputs": [],
    "source": []
