added triangleIsCovered to constructions.py few changes to test_code_drawing.ipynb and test_code_deltaslim.ipynb

--- a/test_code_deltaslim.ipynb
+++ b/test_code_deltaslim.ipynb
@@ -2,9 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\drawSvg\\raster.py:18: RuntimeWarning: Failed to import CairoSVG. drawSvg will be unable to output PNG or other raster image formats. See https://github.com/cduck/drawSvg#prerequisites for more details.\n",
+      "Original OSError: no library called \"cairo-2\" was found\n",
+      "no library called \"cairo\" was found\n",
+      "no library called \"libcairo-2\" was found\n",
+      "cannot load library 'libcairo.so.2': error 0x7e\n",
+      "cannot load library 'libcairo.2.dylib': error 0x7e\n",
+      "cannot load library 'libcairo-2.dll': error 0x7e\n",
+      "  warnings.warn(msg, RuntimeWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "import drawSvg as draw\n",
     "import math\n",
@@ -29,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +84,33 @@
     "                PL.append(Point.fromEuclid(px1,py1))\n",
     "            elif is_on_Linesegment(px2,py1,sideLine):\n",
     "                PL.append(Point.fromEuclid(px2,py2))\n",
-    "    return PL"
+    "    return PL\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def isSideCovered(Side, Line1, Line2, delta):\n",
+    "    return False\n",
+    "'''\n",
+    "def innerHcycle(self, triangle, delta):\n",
+    "    sign = 1 if not triangle.cw else = -1\n",
+    "    return self.makeOffset(delta*sign)\n",
+    "'''"
    ]
   }
  ],
