--- a/test_code_drawing.ipynb
+++ b/test_code_drawing.ipynb
@@ -121,19 +121,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "id": "a719b7da",
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "image/svg+xml": "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\"\n     width=\"500\" height=\"500.0\" viewBox=\"-1.1 -1.1 2.2 2.2\">\n<defs>\n</defs>\n<circle cx=\"0\" cy=\"0\" r=\"1\" fill=\"orange\" stroke-width=\"0.01\" stroke=\"black\" />\n<path d=\"M0.6009973691583826,0.195609803543082 A4.312111854240222,4.312111854240222,0,0,0,-0.7002639362333452,0.09625789329545853 A0.35459786374203334,0.35459786374203334,0,0,1,-0.6997758332307551,0.10374164367054825 A4.952770864177918,4.952770864177918,0,0,1,0.5990450341772835,0.20439511988857095 A0.47687298917032217,0.47687298917032217,0,0,1,0.6009973691583845,0.1956098035430825 Z\" />\n<path d=\"M-0.9917271673994733,0.12836364532770417 A1.954749045237092,1.954749045237092,0,0,1,0.9557721112196977,0.294108264784654 A2.0578869123737045,2.0578869123737045,0,0,0,-0.9917271673994739,0.12836364532770417 Z\" fill=\"red\" />\n<path d=\"M-0.9917271673994461,0.12836364532770972 A14.46814746665004,14.46814746665004,0,0,0,0.9557721112196682,0.294108264784656 A10.164334027527913,10.164334027527913,0,0,1,-0.991727167399471,0.12836364532770617 Z\" fill=\"green\" />\n<path d=\"M-0.3048676590874735,-0.5008180167182423 A0.8865086924508808,0.8865086924508808,0,0,1,-0.7019965024932674,0.09683526685720989 A0.38652953810685253,0.38652953810685253,0,0,1,-0.6980258493049274,0.10319763070823362 A0.8635442307533152,0.8635442307533152,0,0,0,-0.2950993419155361,-0.4992100074711978 A0.7421994784487469,0.7421994784487469,0,0,1,-0.30486765908747343,-0.5008180167182422 Z\" />\n<path d=\"M-0.9771257680515575,0.21266225196224697 A1.2759846814283635,1.2759846814283635,0,0,0,-0.3407243692571911,-0.9401632327390226 A1.2184474932562943,1.2184474932562943,0,0,1,-0.9771257680515574,0.21266225196224664 Z\" fill=\"red\" />\n<path d=\"M-0.9771257680515575,0.21266225196224697 A0.7268660884088808,0.7268660884088808,0,0,0,-0.3407243692571914,-0.9401632327390224 A0.7175318710764992,0.7175318710764992,0,0,1,-0.9771257680515575,0.21266225196224708 Z\" fill=\"green\" />\n<path d=\"M-0.30372397908814674,-0.49673314229349375 A2.9566031000289517,2.9566031000289517,0,0,0,0.5979565566901814,0.20401280722407167 A0.4800183929294103,0.4800183929294103,0,0,1,0.6020779458017005,0.19601232966572352 A3.2443490973685396,3.2443490973685396,0,0,1,-0.2963101574591267,-0.5032934834445308 A0.5756611554303839,0.5756611554303839,0,0,1,-0.30372397908814935,-0.4967331422934967 Z\" />\n<path d=\"M0.9371324080342707,0.34897399589638334 A1.6317423848240304,1.6317423848240304,0,0,1,-0.5555292542891992,-0.8314969919542032 A1.7004159619969281,1.7004159619969281,0,0,0,0.9371324080342714,0.34897399589638334 Z\" fill=\"red\" />\n<path d=\"M0.9371324080342696,0.3489739958963831 A30.26753726395255,30.26753726395255,0,0,1,-0.5555292542891976,-0.8314969919542037 A346.7420993694446,346.7420993694446,0,0,0,0.9371324080371437,0.3489739958985183 Z\" fill=\"green\" />\n<circle cx=\"-0.5575178954979794\" cy=\"-0.010887671209080185\" r=\"0.015\" fill=\"blue\" />\n<circle cx=\"0.26037816807662884\" cy=\"-0.0034542701603030856\" r=\"0.015\" fill=\"blue\" />\n<circle cx=\"-0.5147882897919018\" cy=\"0.09165716894601506\" r=\"0.015\" fill=\"blue\" />\n<circle cx=\"-0.20480232167109413\" cy=\"-0.3972064710478964\" r=\"0.015\" fill=\"blue\" />\n<circle cx=\"0.20868082127820675\" cy=\"0.13059000988004055\" r=\"0.015\" fill=\"blue\" />\n<circle cx=\"-0.33245780462498065\" cy=\"-0.36792864608077\" r=\"0.015\" fill=\"blue\" />\n</svg>",
+      "image/svg+xml": "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\"\n     width=\"500\" height=\"500.0\" viewBox=\"-1.1 -1.1 2.2 2.2\">\n<defs>\n</defs>\n<circle cx=\"0\" cy=\"0\" r=\"1\" fill=\"orange\" stroke-width=\"0.01\" stroke=\"black\" />\n<circle cx=\"-0.699125364795622\" cy=\"0.09987505211366045\" r=\"0.025010398445719784\" fill=\"#eee\" />\n<text x=\"-0.7\" y=\"0.1\" font-size=\"0.05\" text-anchor=\"middle\" dy=\"0.35em\">0</text>\n<circle cx=\"0.6991253647956222\" cy=\"-0.09987505211366031\" r=\"0.025010398445719784\" fill=\"#eee\" />\n<text x=\"0.7\" y=\"-0.1\" font-size=\"0.05\" text-anchor=\"middle\" dy=\"0.35em\">1</text>\n<circle cx=\"-0.29958772348815765\" cy=\"0.5991754469763153\" r=\"0.027508001223681466\" fill=\"#eee\" />\n<text x=\"-0.3\" y=\"0.6\" font-size=\"0.05\" text-anchor=\"middle\" dy=\"0.35em\">2</text>\n<path d=\"M-0.8713588377162472,0.08866261891555993 A3.432738430321737,3.432738430321737,0,0,1,0.9422096240630586,-0.1484741289016025 A5.923872287482241,5.923872287482241,0,0,0,-0.3412004698379856,0.7434973697839382 A0.895511537424987,0.895511537424987,0,0,0,-0.8713588377162476,0.08866261891555893 Z\" stroke-width=\"0.02\" stroke=\"black\" fill=\"none\" />\n<path d=\"M0.6994893809782088,-0.10371494891224131 A66.67166659166647,66.67166659166647,0,0,0,-0.7005499914345155,0.09629067571815142 A0.3535533905932737,0.3535533905932737,0,0,1,-0.6994893809799372,0.10371494891250033 A66.6716665916699,66.6716665916699,0,0,0,0.7005499914345048,-0.096290675718123 A0.3535533905932739,0.3535533905932739,0,0,1,0.6994893809799412,-0.10371494891247027 Z\" />\n<path d=\"M-0.9899494936611669,0.14142135623731056 A3.2789150988545566,3.2789150988545566,0,0,1,0.989949493661165,-0.14142135623730967 A3.6032614522093858,3.6032614522093858,0,0,0,-0.9899494936611666,0.14142135623730967 Z\" fill=\"green\" />\n<path d=\"M-0.989949493661169,0.14142135623730923 A3.6032614522093867,3.6032614522093867,0,0,0,0.9899494936611679,-0.14142135623731011 A3.2789150988545592,3.2789150988545592,0,0,1,-0.9899494936611662,0.14142135623730878 Z\" fill=\"red\" />\n<circle cx=\"0.2521860805610254\" cy=\"0.10626098289588715\" r=\"0.015\" fill=\"blue\" />\n<circle cx=\"-0.5606636397387026\" cy=\"0.18053960234248034\" r=\"0.015\" fill=\"blue\" />\n<path d=\"M-0.29676251040456636,0.6025494171783814 A2.146248182740717,2.146248182740717,0,0,1,0.701171414447489,-0.09644134159985374 A0.35877903238541003,0.35877903238541003,0,0,1,0.6988637959499029,-0.10357715317479634 A2.016425436442721,2.016425436442721,0,0,0,-0.30326895949457966,0.5974776432696638 A0.418155027899733,0.418155027899733,0,0,1,-0.29676251040456464,0.6025494171783792 Z\" />\n<path d=\"M0.9853664777733977,-0.17044912578375548 A6.532149419915895,6.532149419915895,0,0,0,-0.4819464206437738,0.8762006891281526 A5.418232399470248,5.418232399470248,0,0,1,0.9853664777733977,-0.17044912578375548 Z\" fill=\"green\" />\n<path d=\"M0.9853664777733977,-0.17044912578375593 A1.3520552678461166,1.3520552678461166,0,0,0,-0.48194642064377646,0.8762006891281541 A1.3105355801673981,1.3105355801673981,0,0,1,0.9853664777733988,-0.17044912578375548 Z\" fill=\"red\" />\n<circle cx=\"0.20337605767401667\" cy=\"-0.02905372252485905\" r=\"0.015\" fill=\"blue\" />\n<circle cx=\"-0.33217802900641424\" cy=\"0.4847420396594827\" r=\"0.015\" fill=\"blue\" />\n<path d=\"M-0.7014902970024646,0.1034297829034041 A0.6864997963793993,0.6864997963793993,0,0,1,-0.30403988947716165,0.600768880204682 A0.5140635898574856,0.5140635898574856,0,0,1,-0.29592943305228686,0.5992590764030181 A0.6726476608085789,0.6726476608085789,0,0,0,-0.6985327524280831,0.09653780420465263 A0.4140256469448782,0.4140256469448782,0,0,1,-0.7014902970024646,0.10342978290340407 Z\" />\n<path d=\"M-0.32552898749447745,0.9455320609587072 A0.9118006782008422,0.9118006782008422,0,0,0,-0.9989579396913535,0.045640275279695386 A0.8799049361700505,0.8799049361700505,0,0,1,-0.32552898749447734,0.9455320609587071 Z\" fill=\"green\" />\n<path d=\"M-0.325528987494478,0.945532060958707 A0.5911775820689146,0.5911775820689146,0,0,0,-0.9989579396913534,0.04564027527969616 A0.5859299106852999,0.5859299106852999,0,0,1,-0.3255289874944779,0.945532060958707 Z\" fill=\"red\" />\n<circle cx=\"-0.5339917626413109\" cy=\"0.07628453752018727\" r=\"0.015\" fill=\"blue\" />\n<circle cx=\"-0.2212888149333927\" cy=\"0.5049807396132704\" r=\"0.015\" fill=\"blue\" />\n</svg>",
       "text/plain": [
-       "<drawSvg.drawing.Drawing at 0x1ab608e6d90>"
+       "<drawSvg.drawing.Drawing at 0x2792d441c40>"
       ]
      },
+     "execution_count": 82,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -144,6 +145,7 @@
     "from hyperbolic.euclid import intersection\n",
     "from hyperbolic.euclid.shapes import  Arc, Line as ELine, OriginLine, Circle\n",
     "from hyperbolic.poincare.shapes import *\n",
+    "from Triangle import Triangle\n",
     "\n",
     "delta=0.3\n",
     "\n",
@@ -153,43 +155,39 @@
     "d.setRenderSize(500)\n",
     "d.append(draw.Circle(0, 0, 1, fill='orange',stroke_width=0.01, stroke='black'))\n",
     "\n",
-    "p2=(0.6,-0.2)\n",
-    "p1=(-0.7,-0.1)\n",
-    "p3=(-0.3,0.5)\n",
+    "p1=Point.fromEuclid(-0.7,-0.1)\n",
+    "p2=Point.fromEuclid(0.7,0.1)\n",
+    "p3=Point.fromEuclid(-0.3,-0.6)\n",
     "PList=[p1,p2,p3]\n",
+    "#print(PList)\n",
     "\n",
-    "def triangle_sides_from_Points(Points):\n",
-    "    L=[]\n",
-    "    for i,x in enumerate(Points):\n",
-    "        for y in Points[i+1:]:\n",
-    "            L.append(Line.fromPoints(x[0],x[1],y[0],y[1],segment=True))\n",
-    "    return L\n",
+    "Tri=Polygon.fromVertices(PList)\n",
+    "deltaTri=Tri.offsetPolygon(delta)\n",
+    "SList=Tri.edges\n",
     "\n",
     "\n",
-    "SList=triangle_sides_from_Points(PList)\n",
-    "\n",
+    "for i,v in enumerate(PList):\n",
+    "    d.draw(v, hradius=0.1, fill='#eee')\n",
+    "    d.draw(draw.Text(str(i), 0.05, *v, center=0.7))\n",
+    "'''\n",
     "for l in SList:\n",
     "    d.draw(l, hwidth=0.03)\n",
-    "    hcl=deltaLines_of_Line(l,delta)\n",
-    "    d.draw(hcl[0],hwidth=0.03, fill='red')\n",
-    "    d.draw(hcl[1],hwidth=0.03, fill='green')\n",
+    "    d.draw(Hypercycle.fromHypercycleOffset(l,delta),hwidth=0.03, fill='green')\n",
+    "    d.draw(Hypercycle.fromHypercycleOffset(l,-delta),hwidth=0.03, fill='red')\n",
+    "'''\n",
+    "d.draw(deltaTri, stroke_width=0.02, stroke='black', fill='none')\n",
     "\n",
-    "\n",
-    "for i,x in enumerate(SList):\n",
-    "    RestList=SList[:i]+SList[i+1:]\n",
+    "for i,l in enumerate(SList):\n",
+    "    d.draw(l, hwidth=0.03)\n",
+    "    d.draw(Hypercycle.fromHypercycleOffset(l,delta),hwidth=0.03, fill='green')\n",
+    "    d.draw(Hypercycle.fromHypercycleOffset(l,-delta),hwidth=0.03, fill='red')\n",
+    "    RestList = SList[:i] + SList[i+1:]\n",
     "    for y in RestList:\n",
-    "        for h in deltaLines_of_Line(x,delta):\n",
-    "            ip=intersection.circleCircle(y.projShape,h.projShape)\n",
-    "            if is_on_Linesegment(ip[0],ip[1],x):\n",
-    "                ip1=Point.fromEuclid(ip[0],ip[1])\n",
-    "                d.draw(ip1, radius=0.015, fill='blue')\n",
-    "            elif is_on_Linesegment(ip[2],ip[3],x):\n",
-    "                ip2=Point.fromEuclid(ip[2],ip[3])\n",
-    "                d.draw(ip2, radius=0.015, fill='blue')      \n",
-    "        #perpl1=l.makePerpendicular(ip[0],ip[1])\n",
-    "        #perpl2=l.makePerpendicular(ip[2],ip[3])\n",
-    "        #d.draw(perpl1, hwidth=0.03, fill='red')\n",
-    "        #d.draw(perpl2, hwidth=0.03, fill='green')\n",
+    "        for h in deltaLines_of_Line(l,delta):\n",
+    "            ip=y.intersectionsWithHcycle(h)\n",
+    "            for p in ip:\n",
+    "                if is_on_Linesegment(*p,y):\n",
+    "                    d.draw(p, radius=0.015, fill='blue')\n",
     "\n",
     "d"
    ]
