--- a/test_code_drawing.ipynb
+++ b/test_code_drawing.ipynb
@@ -10,25 +10,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "388d6c6d",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d3e125a60a3143e5a94302453427729e",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "DrawingWidget()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import drawSvg as draw\n",
     "from drawSvg.widgets import DrawingWidget\n",
@@ -121,34 +106,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "id": "a719b7da",
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "fromPoints() missing 2 required positional arguments: 'x2' and 'y2'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_11104/3139651006.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     45\u001b[0m                     \u001b[0md\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdraw\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mp\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mradius\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m0.015\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfill\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'blue'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     46\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 47\u001b[1;33m \u001b[0mtriangleIsCovered\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mTri\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdelta\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     48\u001b[0m \u001b[0md\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mc:\\Users\\HP\\Documents\\GitHub\\seminar-wise21-deltaslim\\constructions.py\u001b[0m in \u001b[0;36mtriangleIsCovered\u001b[1;34m(triangle, delta)\u001b[0m\n\u001b[0;32m     53\u001b[0m             \u001b[1;32mraise\u001b[0m \u001b[0mException\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Intersection with edge %s is ambiguous'\u001b[0m\u001b[1;33m%\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     54\u001b[0m         \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'here we need to determine coverage'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: fromPoints() missing 2 required positional arguments: 'x2' and 'y2'"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\drawSvg\\raster.py:18: RuntimeWarning: Failed to import CairoSVG. drawSvg will be unable to output PNG or other raster image formats. See https://github.com/cduck/drawSvg#prerequisites for more details.\n",
+      "Original OSError: no library called \"cairo-2\" was found\n",
+      "no library called \"cairo\" was found\n",
+      "no library called \"libcairo-2\" was found\n",
+      "cannot load library 'libcairo.so.2': error 0x7e\n",
+      "cannot load library 'libcairo.2.dylib': error 0x7e\n",
+      "cannot load library 'libcairo-2.dll': error 0x7e\n",
+      "  warnings.warn(msg, RuntimeWarning)\n"
      ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'Triangle.Triangle'>\n",
+      "False\n"
+     ]
+    },
+    {
+     "data": {
+      "image/svg+xml": "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\"\n     width=\"500\" height=\"500.0\" viewBox=\"-1.1 -1.1 2.2 2.2\">\n<defs>\n</defs>\n<circle cx=\"0\" cy=\"0\" r=\"1\" fill=\"orange\" stroke-width=\"0.01\" stroke=\"black\" />\n<circle cx=\"-0.699125364795622\" cy=\"0.09987505211366045\" r=\"0.025010398445719784\" fill=\"#eee\" />\n<text x=\"-0.7\" y=\"0.1\" font-size=\"0.05\" text-anchor=\"middle\" dy=\"0.35em\">0</text>\n<circle cx=\"0.6991253647956222\" cy=\"-0.09987505211366031\" r=\"0.025010398445719784\" fill=\"#eee\" />\n<text x=\"0.7\" y=\"-0.1\" font-size=\"0.05\" text-anchor=\"middle\" dy=\"0.35em\">1</text>\n<circle cx=\"-0.29958772348815765\" cy=\"-0.5991754469763153\" r=\"0.027508001223681466\" fill=\"#eee\" />\n<text x=\"-0.3\" y=\"-0.6\" font-size=\"0.05\" text-anchor=\"middle\" dy=\"0.35em\">2</text>\n<path d=\"M0.6994893809782088,-0.10371494891224131 A66.67166659166647,66.67166659166647,0,0,0,-0.7005499914345155,0.09629067571815142 A0.3535533905932737,0.3535533905932737,0,0,1,-0.6994893809799372,0.10371494891250033 A66.6716665916699,66.6716665916699,0,0,0,0.7005499914345048,-0.096290675718123 A0.3535533905932739,0.3535533905932739,0,0,1,0.6994893809799412,-0.10371494891247027 Z\" />\n<path d=\"M-0.989949493661166,0.14142135623730945 A1.6291881927933909,1.6291881927933909,0,0,1,0.9899494936611664,-0.14142135623730945 A1.6813495924307065,1.6813495924307065,0,0,0,-0.9899494936611666,0.14142135623731011 Z\" fill=\"green\" />\n<path d=\"M-0.9899494936611665,0.14142135623731011 A1.681349592430708,1.681349592430708,0,0,0,0.9899494936611667,-0.14142135623730923 A1.6291881927933922,1.6291881927933922,0,0,1,-0.9899494936611668,0.1414213562373099 Z\" fill=\"red\" />\n<circle cx=\"0.005643082796069149\" cy=\"-0.3397185833472096\" r=\"0.015\" fill=\"blue\" />\n<circle cx=\"-0.38849625713596525\" cy=\"-0.24652951478599938\" r=\"0.015\" fill=\"blue\" />\n<path d=\"M-0.30307979828945797,-0.5972476790287111 A1.4997384766673576,1.4997384766673576,0,0,0,0.6996794094382451,-0.09625924412135478 A0.36333424398642317,0.36333424398642317,0,0,1,0.7003583035227914,-0.1037281239488961 A1.5703883321591317,1.5703883321591317,0,0,1,-0.29695523074013674,-0.602774582937954 A0.42541656578802384,0.42541656578802384,0,0,1,-0.30307979828945836,-0.5972476790287116 Z\" />\n<path d=\"M0.99482070364378,-0.10164530290030438 A0.8861967119615272,0.8861967119615272,0,0,1,-0.49449856834695577,-0.8691784430730038 A0.8938224216714632,0.8938224216714632,0,0,0,0.99482070364378,-0.10164530290030427 Z\" fill=\"green\" />\n<path d=\"M0.9948207036437609,-0.1016453029003177 A14.138241845102675,14.138241845102675,0,0,0,-0.49449856834693406,-0.8691784430729932 A10.081902792453365,10.081902792453365,0,0,1,0.9948207036437724,-0.1016453029003106 Z\" fill=\"red\" />\n<circle cx=\"-0.07118467448412408\" cy=\"0.010169239212017844\" r=\"0.015\" fill=\"blue\" />\n<circle cx=\"-0.37024850460250036\" cy=\"-0.28598794726245924\" r=\"0.015\" fill=\"blue\" />\n<path d=\"M-0.6980040727139929,0.10318422992354581 A0.8506621040688818,0.8506621040688818,0,0,0,-0.29586681874222465,-0.5998850213820234 A0.46608930768300266,0.46608930768300266,0,0,1,-0.3041122665112739,-0.6001508287014412 A0.8729376836256961,0.8729376836256961,0,0,1,-0.7020178303411839,0.09684896811506094 A0.3877015604817706,0.3877015604817706,0,0,1,-0.6980040727139931,0.10318422992354595 Z\" />\n<path d=\"M-0.3559944989587951,-0.934488050598335 A0.6535444943477572,0.6535444943477572,0,0,1,-0.9768664399251732,0.21385031809169186 A0.6545188671412278,0.6545188671412278,0,0,0,-0.35599449895879515,-0.9344880505983351 Z\" fill=\"green\" />\n<path d=\"M-0.3559944989587964,-0.934488050598334 A2.9557882899016046,2.9557882899016046,0,0,1,-0.976866439925173,0.21385031809169042 A3.3056491916476283,3.3056491916476283,0,0,0,-0.3559944989587951,-0.9344880505983341 Z\" fill=\"red\" />\n<circle cx=\"-0.19013615598660072\" cy=\"0.027162307998085833\" r=\"0.015\" fill=\"blue\" />\n<circle cx=\"-0.04821340315228584\" cy=\"-0.3762009382734308\" r=\"0.015\" fill=\"blue\" />\n</svg>",
+      "text/plain": [
+       "<drawSvg.drawing.Drawing at 0x1c1efea2f70>"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "import drawSvg as draw\n",
-    "import math\n",
-    "from constructions import deltaLines_of_Line,is_on_Linesegment, triangleIsCovered\n",
-    "from hyperbolic import util\n",
-    "from hyperbolic.euclid import intersection\n",
-    "from hyperbolic.euclid.shapes import  Arc, Line as ELine, OriginLine, Circle\n",
+    "from constructions import deltaLines_of_Line, is_on_Linesegment\n",
     "from hyperbolic.poincare.shapes import *\n",
     "from Triangle import Triangle\n",
     "\n",
-    "delta=0.3\n",
+    "delta=0.7\n",
     "\n",
     "d = draw.Drawing(2.2, 2.2, origin='center')\n",
     "\n",
@@ -162,7 +164,7 @@
     "PList=[p1,p2,p3]\n",
     "#print(PList)\n",
     "\n",
-    "Tri=Polygon.fromVertices(PList)\n",
+    "Tri=Triangle.fromVertices(PList)\n",
     "deltaTri=Tri.offsetPolygon(delta)\n",
     "SList=Tri.edges\n",
     "\n",
@@ -185,7 +187,8 @@
     "                if is_on_Linesegment(*p, y):\n",
     "                    d.draw(p, radius=0.015, fill='blue')\n",
     "\n",
-    "triangleIsCovered(Tri, delta)\n",
+    "\n",
+    "print(Tri.isCovered(delta))\n",
     "d"
    ]
   },
@@ -201,25 +204,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "a5675005",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ed81110ec60e4d44825dedb96e1901c7",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "DrawingWidget()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import drawSvg as draw\n",
     "from drawSvg.widgets import DrawingWidget\n",
